--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 <artifactId>spring-web</artifactId>
 <version>5.3.29</version>
 </dependency>
+		<dependency>
+  <groupId>com.google.guava</groupId>
+  <artifactId>guava</artifactId>
+  <version>11.0.2</version>
+</dependency>
 
 		<!-- For LDAP reference server (which does not work) -->
 		<dependency>
